news interface export and button aligning fixed

--- a/src/pages/NewsPage/UI/NewsPage.module.scss
+++ b/src/pages/NewsPage/UI/NewsPage.module.scss
@@ -4,6 +4,8 @@
     min-height: 100vh;
     background-color: #f0eaea;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
     & > *{
         max-width: 800px;
         margin: 0 auto;
@@ -15,20 +17,22 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     transition: resize 0.2s;
+    margin-bottom: 20px;
+    /*min-height: 800px;*/
 }
 
 .NewsItem {
     background-color: white;
     border-radius: 15px;
     overflow: hidden;
-    max-height: 400px;
+    /*max-height: 400px;*/
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, max-height 0.2s;
     z-index: 2;
 }
 
 .NewsItem:hover {
-    max-height: 100%;
+    /*max-height: 100%;*/
     transform: scale(1.05)
     
 }
@@ -47,8 +51,9 @@
 
 .Pagination {
     display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+    justify-content: space-between; 
+    width: 100%;   
+    margin-top: auto;
 }
 
 .PageButton {
